--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<div id="wrapper">
+    <div *ngIf="!logged">
+        <acar-login (pageChanged)="loggedIn()"></acar-login>
+    </div>
+    <div [hidden]="!logged">
+    <router-outlet></router-outlet>
+    </div>
+</div>
