--- a/src/css/style.css
+++ b/src/css/style.css
@@ -214,7 +214,7 @@ div a {
 }
 .nav-header {
   padding: 33px 25px;
-  background-color: #2f4050;
+  background-color: #293846;
   /*background-image: url("patterns/header-profile.png");*/
 }
 .pace-done .nav-header {
