-adaugare proxy pt conectare in baza de date prin API -creare template pt casuta de afisare cursuri -creare serviciu pt cursuri + implementare get all courses

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div id="wrapper">
-    <div *ngIf="!logged">
-        <acar-login (pageChanged)="loggedIn()"></acar-login>
-    </div>
-    <div [hidden]="!logged">
-        <acar-sidebar></acar-sidebar>
-        <router-outlet></router-outlet>
-    </div>
+  <!--<div *ngIf="!logged">-->
+  <!--<acar-login (pageChanged)="loggedIn()"></acar-login>-->
+  <!--</div>-->
+  <!--<div [hidden]="!logged">-->
+  <div>
+    <acar-sidebar></acar-sidebar>
+    <router-outlet></router-outlet>
+  </div>
 </div>
