--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3689,7 +3689,7 @@ video {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 240px;
-    min-height: 2002px;
+    /*min-height: 2002px;*/
   }
 }
 .title-action {
@@ -8466,7 +8466,7 @@ body.md-skin {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 220px;
-    min-height: 1200px;
+    /*min-height: 1200px;*/
   }
   .navbar-static-side {
     z-index: 2001;
