--- a/src/app/common/components/sidebar/sidebar.component.html
+++ b/src/app/common/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <ul class="nav" >
             <acar-header></acar-header>
             <li routerLinkActive="active">
-                <a routerLink="/home"><i class="fa fa-th-large"></i> <span class="nav-label">Acasa</span></a>
+                <a routerLink="/home"><i class="fa fa-home"></i> <span class="nav-label">Acasa</span></a>
             </li>
             <li routerLinkActive="active">
                 <a routerLink="/courses"><i class="fa fa-book"></i> <span
