--- a/src/app/main/components/courses/courses.component.html
+++ b/src/app/main/components/courses/courses.component.html
@@ -1,3 +1,50 @@
-<p>
-  courses works!
-</p>
+<div id="page-wrapper">
+  <div class="row wrapper border-bottom white-bg page-heading animated fadeInDown">
+    <h2>Cursuri</h2>
+  </div>
+  <div class="wrapper wrapper-content animated fadeInRight">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="ibox float-e-margins">
+          <div class="ibox-title">
+            <h5>Lista cursurilor</h5>
+          </div>
+          <div class="ibox-content">
+            <div class="table-responsive">
+              <table class="table table-striped table-bordered table-hover">
+                <thead>
+                <tr>
+                  <th colspan="11">
+                    Filtru dupa nume:
+                    <input #filter class="form-control"/>
+                  </th>
+                </tr>
+                </thead>
+              </table>
+            </div>
+            <div class="row animate fadeInDown">
+              <div *ngFor="let course of courses" class="box box-zoom">
+                <div class="boxes-orange col-sm-2" *ngIf="course.id % 10 % 2 == 1">
+                  <i class="fa fa-pencil icon-box-orange"></i>
+                  <span>{{course.name}}</span> <br/>
+                  <span>Titular: {{course.main_teacher}}</span> <br/>
+                  <span>An: {{course.year}}</span>
+                </div>
+                <div class="boxes-blue col-sm-2" *ngIf="course.id % 10 % 2 == 0">
+                  <i class="fa fa-book icon-box-blue"></i>
+                  {{course.name}}<br/>
+                  Titular: {{course.main_teacher}}<br/>
+                  An: {{course.year}}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--<lp-addadmin (pageChanged)="handleAdd($event)"></lp-addadmin>-->
+<!--<lp-confirmation (pageChanged)="handleDelete($event)"></lp-confirmation>-->
+<!--<lp-editadmin (pageChanged)="handleEdit($event)"></lp-editadmin>-->
+
