--- a/src/app/main/components/courses/courses.component.html
+++ b/src/app/main/components/courses/courses.component.html
@@ -16,7 +16,7 @@
                 <tr>
                   <th colspan="11">
                     Filtru dupa nume:
-                    <input #filter class="form-control"/>
+                    <input #nameFilter class="form-control"/>
                   </th>
                 </tr>
                 </thead>
