-implementare pagina home

--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -1,3 +1,149 @@
-<p>
-  home works!
-</p>
+<div id="page-wrapper" class="home">
+  <div class="wrapper wrapper-content animated fadeInRight home-page">
+    <div class="col-sm-12 aligned-text">
+      <span class="shape-orange-left"></span>
+      <span class="highlight">Despre AcaR</span>
+      <span class="shape-orange-right"></span><br/>
+      <span class="home-text">Academic Recommender</span>
+      <br/><br/>
+    </div>
+    <div class="container">
+      <div class="col-sm-4">
+        <div class="row home-i">
+          <div class="icon-home">
+            <i class="fa fa-archive"></i>
+          </div>
+          <a routerLink="/courses">
+            <div>
+              <span class="highlight">Cursuri</span>
+              <br/>
+              <span class="home-text">Cu AcaR poti vedea cursurile <br/>
+            din facultatea ta!</span>
+            </div>
+          </a>
+        </div>
+
+        <div class="row home-i">
+          <br/><br/><br/>
+          <div class="icon-home">
+            <i class="fa fa-book"></i>
+          </div>
+          <div>
+            <span class="highlight">Carti</span>
+            <br/>
+            <span class="home-text">Cu AcaR poti gasi cartile <br/>
+            necesare pentru cursul cautat!</span>
+          </div>
+        </div>
+
+        <div class="row home-i">
+          <br/><br/><br/>
+          <div class="icon-home">
+            <i class="fa fa-bar-chart"></i>
+          </div>
+          <div>
+            <span class="highlight">Note</span>
+            <br/>
+            <span class="home-text">Cu AcaR poti gasi toate <br/>
+            notele primite pentru un curs!</span>
+          </div>
+        </div>
+
+        <div class="row home-i">
+          <br/><br/><br/>
+          <div class="icon-home">
+            <i class="fa fa-comments-o"></i>
+          </div>
+          <div>
+            <span class="highlight">Barfe</span>
+            <br/>
+            <span class="home-text">Cu AcaR poti gasi toate <br/>
+            barfele despre profesori sau cursuri!</span>
+          </div>
+        </div>
+
+        <div class="row home-i">
+          <br/><br/><br/>
+          <div class="icon-home">
+            <i class="fa fa-code"></i>
+          </div>
+          <div>
+            <span class="highlight">Proiecte</span>
+            <br/>
+            <span class="home-text">Cu AcaR poti gasi toate <br/>
+            proiectele disponibile pentru un curs!</span>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <br/><br/><br/>
+        <img class="home-image" src="../../../../assets/student.png"/>
+      </div>
+      <div class="col-sm-4">
+        <div class="row home-i">
+          <div class="icon-home">
+            <i class="fa fa-users"></i>
+          </div>
+          <div>
+            <span class="highlight">Profesori</span>
+            <br/>
+            <span class="home-text">Cu AcaR poti vedea detaliile <br/>
+            despre profesorii din facultatea ta!</span>
+          </div>
+        </div>
+
+        <div class="row home-i">
+          <br/><br/><br/>
+          <div class="icon-home">
+            <i class="fa fa-clock-o"></i>
+          </div>
+          <div>
+            <span class="highlight">Orar</span>
+            <br/>
+            <span class="home-text">Cu  AcaR poti vedea tot orarul <br/>
+            si iti poti planifica timpul mai eficient!</span>
+          </div>
+        </div>
+
+        <div class="row home-i">
+          <br/><br/><br/>
+          <div class="icon-home">
+            <i class="fa fa-file-text"></i>
+          </div>
+          <div>
+            <span class="highlight">Documente</span>
+            <br/>
+            <span class="home-text">Cu  AcaR poti gasi toate <br/>
+            documentele disponibile pentru un curs!</span>
+          </div>
+        </div>
+
+        <div class="row home-i">
+          <br/><br/><br/>
+          <div class="icon-home">
+            <i class="fa fa-linode"></i>
+          </div>
+          <div>
+            <span class="highlight">Tools</span>
+            <br/>
+            <span class="home-text">Cu  AcaR poti gasi toate <br/>
+            tool-urile necesare pentru un anumit curs!</span>
+          </div>
+        </div>
+
+        <div class="row home-i">
+          <br/><br/><br/>
+          <div class="icon-home">
+            <i class="fa fa-star-half-o"></i>
+          </div>
+          <div>
+            <span class="highlight">Rating</span>
+            <br/>
+            <span class="home-text">Cu  AcaR poti gasi si acorda <br/>
+            rating pentru un anumit profesor!</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
