--- a/src/app/common/components/sidebar/sidebar.component.html
+++ b/src/app/common/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar-default navbar-static-side" role="navigation">
     <div>
-        <ul class="nav" >
+        <ul class="nav full-height" >
             <acar-header></acar-header>
             <li routerLinkActive="active">
                 <a routerLink="/home"><i class="fa fa-home"></i> <span class="nav-label">Acasa</span></a>
