-adaugare componenta generala tabs -adaugare module pentru cursuri: carti,proiecte,documente,barfe,detalii curs -adaugare componenta profesori avand: detalii profesor, barfe -stilizari componente -creare de servicii pentru cursuri si profesori

--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -9,32 +9,34 @@
     </div>
     <div class="container">
       <div class="col-sm-4">
-        <div class="row home-i">
-          <div class="icon-home">
-            <i class="fa fa-archive"></i>
-          </div>
-          <a routerLink="/courses">
+        <a routerLink="/courses">
+          <div class="row home-i">
+            <div class="icon-home">
+              <i class="fa fa-paperclip"></i>
+            </div>
             <div>
               <span class="highlight">Cursuri</span>
               <br/>
               <span class="home-text">Cu AcaR poti vedea cursurile <br/>
             din facultatea ta!</span>
             </div>
-          </a>
-        </div>
+          </div>
+        </a>
 
-        <div class="row home-i">
-          <br/><br/><br/>
-          <div class="icon-home">
-            <i class="fa fa-book"></i>
-          </div>
-          <div>
-            <span class="highlight">Carti</span>
-            <br/>
-            <span class="home-text">Cu AcaR poti gasi cartile <br/>
+        <a routerLink="/books">
+          <div class="row home-i">
+            <br/><br/><br/>
+            <div class="icon-home">
+              <i class="fa fa-book"></i>
+            </div>
+            <div>
+              <span class="highlight">Carti</span>
+              <br/>
+              <span class="home-text">Cu AcaR poti gasi cartile <br/>
             necesare pentru cursul cautat!</span>
+            </div>
           </div>
-        </div>
+        </a>
 
         <div class="row home-i">
           <br/><br/><br/>
@@ -79,18 +81,21 @@
         <br/><br/><br/>
         <img class="home-image" src="../../../../assets/student.png"/>
       </div>
+
       <div class="col-sm-4">
-        <div class="row home-i">
-          <div class="icon-home">
-            <i class="fa fa-users"></i>
-          </div>
-          <div>
-            <span class="highlight">Profesori</span>
-            <br/>
-            <span class="home-text">Cu AcaR poti vedea detaliile <br/>
+        <a routerLink="/teachers">
+          <div class="row home-i">
+            <div class="icon-home">
+              <i class="fa fa-users"></i>
+            </div>
+            <div>
+              <span class="highlight">Profesori</span>
+              <br/>
+              <span class="home-text">Cu AcaR poti vedea detaliile <br/>
             despre profesorii din facultatea ta!</span>
+            </div>
           </div>
-        </div>
+        </a>
 
         <div class="row home-i">
           <br/><br/><br/>
