--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3678,7 +3678,7 @@ video {
   padding: 0 20px;
 }
 .wrapper-content {
-  padding: 20px 10px 40px;
+  padding: 20px 10px 0;
 }
 #page-wrapper {
   padding: 0 15px;
