--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <div id="wrapper">
   <!--<div *ngIf="!logged">-->
-  <!--<acar-login (pageChanged)="loggedIn()"></acar-login>-->
+    <!--<acar-login (pageChanged)="loggedIn()"></acar-login>-->
   <!--</div>-->
-  <!--<div [hidden]="!logged">-->
-  <div>
-    <acar-sidebar></acar-sidebar>
-    <router-outlet></router-outlet>
+  <div [hidden]="!logged">
+    <div>
+      <acar-sidebar></acar-sidebar>
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
