--- a/src/app/common/components/sidebar/sidebar.component.html
+++ b/src/app/common/components/sidebar/sidebar.component.html
@@ -6,9 +6,17 @@
                 <a routerLink="/home"><i class="fa fa-home"></i> <span class="nav-label">Acasa</span></a>
             </li>
             <li routerLinkActive="active">
-                <a routerLink="/courses"><i class="fa fa-book"></i> <span
+                <a routerLink="/courses"><i class="fa fa-paperclip"></i> <span
                         class="nav-label">Cursuri</span></a>
             </li>
+          <li routerLinkActive="active">
+            <a routerLink="/teachers"><i class="fa fa-users"></i> <span
+              class="nav-label">Profesori</span></a>
+          </li>
+          <li routerLinkActive="active">
+            <a routerLink="/books"><i class="fa fa-book"></i> <span
+              class="nav-label">Carti</span></a>
+          </li>
         </ul>
     </div>
 </nav>
