-adaugare componenta navbar -adaugare componente: documente, proiecte, carti -adaugare componenta: barfe

--- a/src/app/common/components/sidebar/sidebar.component.html
+++ b/src/app/common/components/sidebar/sidebar.component.html
@@ -17,6 +17,16 @@
             <a routerLink="/books"><i class="fa fa-book"></i> <span
               class="nav-label">Carti</span></a>
           </li>
+          <li routerLinkActive="active">
+            <a routerLink="/projects"><i class="fa fa-code"></i> <span
+              class="nav-label">Proiecte</span></a>
+          </li>
+          <li routerLinkActive="active">
+            <a routerLink="/documents"><i class="fa fa-file-text"></i> <span
+              class="nav-label">Documente</span></a>
+          </li>
+
+          <li> <img src="../../../../assets/sigla.png" class="logo"/></li>
         </ul>
     </div>
 </nav>
