--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -2,10 +2,8 @@
   <div class="wrapper wrapper-content animated fadeInRight home-page">
     <div class="col-sm-12 aligned-text">
       <span class="shape-orange-left"></span>
-      <span class="highlight">Despre AcaR</span>
+      <img src="../../../../assets/sigla.png" class="logo"/>
       <span class="shape-orange-right"></span><br/>
-      <span class="home-text">Academic Recommender</span>
-      <br/><br/>
     </div>
     <div class="container">
       <div class="col-sm-4">
@@ -64,18 +62,20 @@
           </div>
         </div>
 
-        <div class="row home-i">
-          <br/><br/><br/>
-          <div class="icon-home">
-            <i class="fa fa-code"></i>
-          </div>
-          <div>
-            <span class="highlight">Proiecte</span>
-            <br/>
-            <span class="home-text">Cu AcaR poti gasi toate <br/>
+        <a routerLink="/projects">
+          <div class="row home-i">
+            <br/><br/><br/>
+            <div class="icon-home">
+              <i class="fa fa-code"></i>
+            </div>
+            <div>
+              <span class="highlight">Proiecte</span>
+              <br/>
+              <span class="home-text">Cu AcaR poti gasi toate <br/>
             proiectele disponibile pentru un curs!</span>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
       <div class="col-sm-4">
         <br/><br/><br/>
@@ -110,18 +110,20 @@
           </div>
         </div>
 
-        <div class="row home-i">
-          <br/><br/><br/>
-          <div class="icon-home">
-            <i class="fa fa-file-text"></i>
-          </div>
-          <div>
-            <span class="highlight">Documente</span>
-            <br/>
-            <span class="home-text">Cu  AcaR poti gasi toate <br/>
+        <a routerLink="/documents">
+          <div class="row home-i">
+            <br/><br/><br/>
+            <div class="icon-home">
+              <i class="fa fa-file-text"></i>
+            </div>
+            <div>
+              <span class="highlight">Documente</span>
+              <br/>
+              <span class="home-text">Cu  AcaR poti gasi toate <br/>
             documentele disponibile pentru un curs!</span>
+            </div>
           </div>
-        </div>
+        </a>
 
         <div class="row home-i">
           <br/><br/><br/>
