--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div id="wrapper">
-  <!--<div *ngIf="!logged">-->
-    <!--<acar-login (pageChanged)="loggedIn()"></acar-login>-->
-  <!--</div>-->
+  <div *ngIf="!logged">
+    <acar-login (pageChanged)="loggedIn()"></acar-login>
+  </div>
   <div [hidden]="!logged">
     <div>
+      <acar-navbar></acar-navbar>
       <acar-sidebar></acar-sidebar>
       <router-outlet></router-outlet>
     </div>
