--- a/src/app/main/components/allprojects/allprojects.component.html
+++ b/src/app/main/components/allprojects/allprojects.component.html
@@ -1,6 +1,6 @@
 <div id="page-wrapper">
   <div class="row wrapper border-bottom white-bg page-heading animated fadeInDown">
-    <h2>Carti</h2>
+    <h2>Proiecte</h2>
   </div>
   <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
@@ -19,29 +19,28 @@
                 </thead>
               </table>
             </div>
-            <div class="row animate fadeInDown overflow">
-              <div *ngFor="let book of books" class="box box-zoom">
-                <div class="boxes-orange col-sm-2" *ngIf="book.id % 10 % 2 == 1">
-                  <i class="fa fa-book icon-box-orange"></i>
+            <div class="row animate fadeInDown">
+              <div *ngFor="let project of projects" class="box box-zoom">
+                <div class="boxes-orange col-sm-2" *ngIf="project.id % 10 % 2 == 1">
+                  <i class="fa fa-code icon-box-orange"></i>
                   <span>
-                    <strong>Curs:</strong> Nume Curs <br/>
-                  <strong>Titlu carte</strong> {{book.title}}<br/>
-                  <strong>Autor:</strong> {{book.author}} <br/>
-                  <strong>Locatie:</strong> {{book.location}}
+                  <strong>Curs:</strong> Nume Curs <br/>
+                  <strong>Titlu proiect:</strong> {{project.title}}<br/>
+                  <strong>Continut:</strong> {{project.content}} <br/>
+                  <strong>Fisier:</strong> <a>{{project.file}}</a>
                 </span>
                 </div>
 
-                <div class="boxes-blue col-sm-2" *ngIf="book.id % 10 % 2 == 0">
-                  <i class="fa fa-book icon-box-blue"></i>
+                <div class="boxes-blue col-sm-2" *ngIf="project.id % 10 % 2 == 0">
+                  <i class="fa fa-code icon-box-blue"></i>
                   <span>
                     <strong>Curs:</strong> Nume Curs <br/>
-                  <strong>Titlu carte</strong> {{book.title}}<br/>
-                  <strong>Autor:</strong> {{book.author}} <br/>
-                  <strong>Locatie:</strong> {{book.location}}
+                  <strong>Titlu proiect:</strong> {{project.title}}<br/>
+                  <strong>Continut:</strong> {{project.content}} <br/>
+                  <strong>Fisier:</strong> <a>{{project.file}}</a>
                 </span>
                 </div>
               </div>
-            </div>
           </div>
         </div>
       </div>
