-upload last version

--- a/src/app/common/components/navbar/navbar.component.html
+++ b/src/app/common/components/navbar/navbar.component.html
@@ -1,16 +1,16 @@
-<div class="row border-bottom">
-  <nav class="navbar navbar-static-top navbar-top" >
-    <ul class="nav navbar-top-links navbar-right">
-      <li>
-        <a routerLink="/home">
-          <i class="fa fa-home"></i> Acasa
-        </a>
-      </li>
-      <li>
-        <a >
-          <i class="fa fa-sign-out"></i> Logout
-        </a>
-      </li>
-    </ul>
-  </nav>
-</div>
+<!--<div class="row">-->
+  <!--<nav class="navbar navbar-static-top navbar-top" >-->
+    <!--<ul class="nav navbar-top-links navbar-right">-->
+      <!--<li>-->
+        <!--<a routerLink="/home">-->
+          <!--<i class="fa fa-home"></i> Acasa-->
+        <!--</a>-->
+      <!--</li>-->
+      <!--<li>-->
+        <!--<a>-->
+          <!--<i class="fa fa-sign-out"></i> Logout-->
+        <!--</a>-->
+      <!--</li>-->
+    <!--</ul>-->
+  <!--</nav>-->
+<!--</div>-->
