--- a/src/app/common/components/sidebar/sidebar.component.html
+++ b/src/app/common/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar-default navbar-static-side" role="navigation">
+<nav class="navbar-default navbar-static-side">
     <div>
-        <ul class="nav full-height" >
+        <ul class="nav full-height navbar" >
             <acar-header></acar-header>
             <li routerLinkActive="active">
                 <a routerLink="/home"><i class="fa fa-home"></i> <span class="nav-label">Acasa</span></a>
@@ -25,8 +25,6 @@
             <a routerLink="/documents"><i class="fa fa-file-text"></i> <span
               class="nav-label">Documente</span></a>
           </li>
-
-          <li> <img src="../../../../assets/sigla.png" class="logo"/></li>
         </ul>
     </div>
 </nav>
