--- a/src/app/main/components/courses/coursedetail/coursegossips/coursegossips.component.html
+++ b/src/app/main/components/courses/coursedetail/coursegossips/coursegossips.component.html
@@ -1,4 +1,4 @@
-<div class="row animated fadeInRight">
+<div class="row ">
   <div class="col-sm-8">
     <button type="button" class="btn btn-primary" style="margin-top:20px;" (click)="modalMember.open()">
       Adauga o barfa
