--- a/src/app/main/components/courses/coursedetail/projects/projects.component.html
+++ b/src/app/main/components/courses/coursedetail/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper wrapper-content animated fadeInRight">
+<div class="wrapper wrapper-content">
   <div class="row">
     <div class="col-lg-12">
       <div class="ibox float-e-margins">
@@ -15,7 +15,7 @@
               </thead>
             </table>
           </div>
-          <div class="row animate fadeInDown">
+          <div class="row">
             <div *ngFor="let project of projects" class="box box-zoom">
               <div class="boxes-orange col-sm-2" *ngIf="project.id % 10 % 2 == 1">
                 <i class="fa fa-code icon-box-orange"></i>
