--- a/src/app/main/components/home/home.component.html
+++ b/src/app/main/components/home/home.component.html
@@ -1,154 +1,152 @@
 <div id="page-wrapper" class="home">
-  <div class="wrapper wrapper-content animated fadeInRight home-page">
+  <div class="wrapper wrapper-content  home-page">
     <div class="col-sm-12 aligned-text">
       <span class="shape-orange-left"></span>
       <img src="../../../../assets/sigla.png" class="logo"/>
       <span class="shape-orange-right"></span><br/>
     </div>
-    <div class="container">
-      <div class="col-sm-4">
-        <a routerLink="/courses">
-          <div class="row home-i">
-            <div class="icon-home">
-              <i class="fa fa-paperclip"></i>
-            </div>
-            <div>
-              <span class="highlight">Cursuri</span>
-              <br/>
-              <span class="home-text">Cu AcaR poti vedea cursurile <br/>
+    <div class="col-sm-4">
+      <a routerLink="/courses">
+        <div class="row home-i">
+          <div class="icon-home">
+            <i class="fa fa-paperclip"></i>
+          </div>
+          <div>
+            <span class="highlight">Cursuri</span>
+            <br/>
+            <span class="home-text">Cu AcaR poti vedea cursurile <br/>
             din facultatea ta!</span>
-            </div>
           </div>
-        </a>
+        </div>
+      </a>
 
-        <a routerLink="/books">
-          <div class="row home-i">
-            <br/><br/><br/>
-            <div class="icon-home">
-              <i class="fa fa-book"></i>
-            </div>
-            <div>
-              <span class="highlight">Carti</span>
-              <br/>
-              <span class="home-text">Cu AcaR poti gasi cartile <br/>
+      <a routerLink="/books">
+        <div class="row home-i">
+          <br/><br/><br/>
+          <div class="icon-home">
+            <i class="fa fa-book"></i>
+          </div>
+          <div>
+            <span class="highlight">Carti</span>
+            <br/>
+            <span class="home-text">Cu AcaR poti gasi cartile <br/>
             necesare pentru cursul cautat!</span>
-            </div>
-          </div>
-        </a>
-
-        <div class="row home-i">
-          <br/><br/><br/>
-          <div class="icon-home">
-            <i class="fa fa-bar-chart"></i>
-          </div>
-          <div>
-            <span class="highlight">Note</span>
-            <br/>
-            <span class="home-text">Cu AcaR poti gasi toate <br/>
-            notele primite pentru un curs!</span>
           </div>
         </div>
+      </a>
 
-        <div class="row home-i">
-          <br/><br/><br/>
-          <div class="icon-home">
-            <i class="fa fa-comments-o"></i>
-          </div>
-          <div>
-            <span class="highlight">Barfe</span>
-            <br/>
-            <span class="home-text">Cu AcaR poti gasi toate <br/>
-            barfele despre profesori sau cursuri!</span>
-          </div>
-        </div>
-
-        <a routerLink="/projects">
-          <div class="row home-i">
-            <br/><br/><br/>
-            <div class="icon-home">
-              <i class="fa fa-code"></i>
-            </div>
-            <div>
-              <span class="highlight">Proiecte</span>
-              <br/>
-              <span class="home-text">Cu AcaR poti gasi toate <br/>
-            proiectele disponibile pentru un curs!</span>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-sm-4">
+      <div class="row home-i">
         <br/><br/><br/>
-        <img class="home-image" src="../../../../assets/student.png"/>
+        <div class="icon-home">
+          <i class="fa fa-bar-chart"></i>
+        </div>
+        <div>
+          <span class="highlight">Note</span>
+          <br/>
+          <span class="home-text">Cu AcaR poti gasi toate <br/>
+            notele primite pentru un curs!</span>
+        </div>
       </div>
 
-      <div class="col-sm-4">
-        <a routerLink="/teachers">
-          <div class="row home-i">
-            <div class="icon-home">
-              <i class="fa fa-users"></i>
-            </div>
-            <div>
-              <span class="highlight">Profesori</span>
-              <br/>
-              <span class="home-text">Cu AcaR poti vedea detaliile <br/>
-            despre profesorii din facultatea ta!</span>
-            </div>
-          </div>
-        </a>
+      <div class="row home-i">
+        <br/><br/><br/>
+        <div class="icon-home">
+          <i class="fa fa-comments-o"></i>
+        </div>
+        <div>
+          <span class="highlight">Barfe</span>
+          <br/>
+          <span class="home-text">Cu AcaR poti gasi toate <br/>
+            barfele despre profesori sau cursuri!</span>
+        </div>
+      </div>
 
+      <a routerLink="/projects">
         <div class="row home-i">
           <br/><br/><br/>
           <div class="icon-home">
-            <i class="fa fa-clock-o"></i>
+            <i class="fa fa-code"></i>
           </div>
           <div>
-            <span class="highlight">Orar</span>
+            <span class="highlight">Proiecte</span>
             <br/>
-            <span class="home-text">Cu  AcaR poti vedea tot orarul <br/>
-            si iti poti planifica timpul mai eficient!</span>
+            <span class="home-text">Cu AcaR poti gasi toate <br/>
+            proiectele disponibile pentru un curs!</span>
           </div>
         </div>
+      </a>
+    </div>
+    <div class="col-sm-4">
+      <br/><br/><br/>
+      <img class="home-image" src="../../../../assets/student.png"/>
+    </div>
 
-        <a routerLink="/documents">
-          <div class="row home-i">
-            <br/><br/><br/>
-            <div class="icon-home">
-              <i class="fa fa-file-text"></i>
-            </div>
-            <div>
-              <span class="highlight">Documente</span>
-              <br/>
-              <span class="home-text">Cu  AcaR poti gasi toate <br/>
-            documentele disponibile pentru un curs!</span>
-            </div>
+    <div class="col-sm-4">
+      <a routerLink="/teachers">
+        <div class="row home-i">
+          <div class="icon-home">
+            <i class="fa fa-users"></i>
           </div>
-        </a>
+          <div>
+            <span class="highlight">Profesori</span>
+            <br/>
+            <span class="home-text">Cu AcaR poti vedea detaliile <br/>
+            despre profesorii din facultatea ta!</span>
+          </div>
+        </div>
+      </a>
 
+      <div class="row home-i">
+        <br/><br/><br/>
+        <div class="icon-home">
+          <i class="fa fa-clock-o"></i>
+        </div>
+        <div>
+          <span class="highlight">Orar</span>
+          <br/>
+          <span class="home-text">Cu  AcaR poti vedea tot orarul <br/>
+            si iti poti planifica timpul mai eficient!</span>
+        </div>
+      </div>
+
+      <a routerLink="/documents">
         <div class="row home-i">
           <br/><br/><br/>
           <div class="icon-home">
-            <i class="fa fa-linode"></i>
+            <i class="fa fa-file-text"></i>
           </div>
           <div>
-            <span class="highlight">Tools</span>
+            <span class="highlight">Documente</span>
             <br/>
             <span class="home-text">Cu  AcaR poti gasi toate <br/>
-            tool-urile necesare pentru un anumit curs!</span>
+            documentele disponibile pentru un curs!</span>
           </div>
         </div>
+      </a>
 
-        <div class="row home-i">
-          <br/><br/><br/>
-          <div class="icon-home">
-            <i class="fa fa-star-half-o"></i>
-          </div>
-          <div>
-            <span class="highlight">Rating</span>
-            <br/>
-            <span class="home-text">Cu  AcaR poti gasi si acorda <br/>
+      <div class="row home-i">
+        <br/><br/><br/>
+        <div class="icon-home">
+          <i class="fa fa-linode"></i>
+        </div>
+        <div>
+          <span class="highlight">Tools</span>
+          <br/>
+          <span class="home-text">Cu  AcaR poti gasi toate <br/>
+            tool-urile necesare pentru un anumit curs!</span>
+        </div>
+      </div>
+
+      <div class="row home-i">
+        <br/><br/><br/>
+        <div class="icon-home">
+          <i class="fa fa-star-half-o"></i>
+        </div>
+        <div>
+          <span class="highlight">Rating</span>
+          <br/>
+          <span class="home-text">Cu  AcaR poti gasi si acorda <br/>
             rating pentru un anumit profesor!</span>
-          </div>
         </div>
       </div>
     </div>
