--- a/src/app/main/components/login/login.component.html
+++ b/src/app/main/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="middle-box text-center loginscreen animated fadeInDown login-box child">
+<div class="middle-box text-center loginscreen login-box child">
     <div class="col-md-12">
         <img src="../../../../assets/sigla.png" class="login-logo">
     </div>
