--- a/src/app/common/components/sidebar/header/header.component.html
+++ b/src/app/common/components/sidebar/header/header.component.html
@@ -1,13 +1,11 @@
 <li class="nav-header">
   <div class="dropdown profile-element">
-    <span><img alt="image" class="img-circle" src="../../../../../assets/profile_small.jpg" /></span>
-    <a routerLink="/account"><span class="clear"><span class="block m-t-xs"> <strong class="font-bold">Urse Daniel (admin)</strong></span></span></a>
-    <!--    <ul class="dropdown-menu animated fadeInRight m-t-xs">
-          <li><a href="profile.html">Profile</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
-          <li><a href="mailbox.html">Mailbox</a></li>
-          <li class="divider"></li>
-          <li><a href="login.html">Logout</a></li>
-        </ul>-->
+    <span><img alt="image" class="img-circle" src="../../../../../assets/profile_small.jpg"/></span>
+    <a routerLink="/account">
+      <span class="clear">
+      <span class="block m-t-xs">
+        <strong class="font-bold">Urse Daniel (admin)</strong>
+      </span>
+      </span></a>
   </div>
 </li>
