--- a/src/app/common/components/tabs/tabs.component.css
+++ b/src/app/common/components/tabs/tabs.component.css
@@ -11,3 +11,13 @@ ul li a:hover {
   background-color: #e6e7e8;
   color: #4b4b4d;
 }
+
+.nav > li.active {
+  border:none;
+  background: #293846;
+}
+
+
+.nav-tabs > li > a {
+  border-radius: 0;
+}
