--- a/src/app/main/components/courses/coursedetail/coursedetail.component.html
+++ b/src/app/main/components/courses/coursedetail/coursedetail.component.html
@@ -2,7 +2,7 @@
   <div class="row wrapper border-bottom white-bg page-heading">
     <h2><a routerLink="/courses">Cursuri</a> -> <a>Vizualizare curs</a></h2>
   </div>
-  <div class="wrapper wrapper-content animated fadeInRight">
+  <div class="wrapper wrapper-content ">
     <div class="row" style="padding-bottom: 15px; background-color: white;">
       <div class="col-lg-12 no-padding">
         <div class="ibox float-e-margins">
