--- a/src/app/main/components/courses/courses.component.html
+++ b/src/app/main/components/courses/courses.component.html
@@ -2,7 +2,7 @@
   <div class="row wrapper border-bottom white-bg page-heading animated fadeInDown">
     <h2>Cursuri</h2>
   </div>
-  <div class="wrapper wrapper-content animated fadeInRight">
+  <div class="wrapper wrapper-content ">
     <div class="row">
       <div class="col-lg-12">
         <div class="ibox float-e-margins">
