-adaugare servicii books,docs,projects pt conectare API backend

--- a/src/app/main/components/courses/coursedetail/coursedetail.component.html
+++ b/src/app/main/components/courses/coursedetail/coursedetail.component.html
@@ -27,10 +27,10 @@
                 <acar-docs *ngIf="selectedTab.select == 4" [courseId]="courseSelected"></acar-docs>
               </div>
               <div class="col-lg-12">
-                <acar-coursegossips *ngIf="selectedTab.select == 5"></acar-coursegossips>
+                <acar-coursegossips *ngIf="selectedTab.select == 5" [courseId]="courseSelected"></acar-coursegossips>
               </div>
               <div class="col-lg-12">
-                <acar-coursegrades *ngIf="selectedTab.select == 6"></acar-coursegrades>
+                <acar-coursegrades *ngIf="selectedTab.select == 6" ></acar-coursegrades>
               </div>
 
               <br/><br/>
