--- a/src/app/main/components/courses/coursedetail/coursegossips/coursegossips.component.html
+++ b/src/app/main/components/courses/coursedetail/coursegossips/coursegossips.component.html
@@ -8,7 +8,7 @@
   <div class="col-md-8" *ngFor="let gossip of gossips">
     <span class="highlight">{{gossip.title}} <i class="fa fa-commenting"></i></span>
     <br/>
-    <span><strong>Data publicarii:</strong> {{gossip.date}}</span>
+    <span><strong>Data publicarii:</strong> {{gossip.posting_date}}</span>
     <hr>
     <span><strong>Continut:</strong> {{gossip.content}}</span>
     <hr>
