--- a/src/app/main/components/courses/courses.component.html
+++ b/src/app/main/components/courses/courses.component.html
@@ -40,6 +40,11 @@
                   </div>
                 </a>
               </div>
+              <div class="row">
+                <div class="col-sm-12">
+                  <lp-pagination [pager]="pager" (pageChanged)="handlePageChanged($event)"></lp-pagination>
+                </div>
+              </div>
             </div>
           </div>
         </div>
