-adaugare paginare pt proiecte,carti,documente (de la cursuri)

--- a/src/app/main/components/courses/coursedetail/books/books.component.html
+++ b/src/app/main/components/courses/coursedetail/books/books.component.html
@@ -35,6 +35,13 @@
                 </span>
               </div>
             </div>
+
+            <div class="row">
+              <div class="col-sm-12">
+                <lp-pagination [pager]="pager" (pageChanged)="handlePageChanged($event)"></lp-pagination>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
